crates/reinhardt-core/macros/tests/ui/settings/fail/fragment_no_section.rs
use reinhardt_macros::settings;

#[settings(fragment = true)]
pub struct BadSettings {
	pub value: String,
}

fn main() {}
