crates/reinhardt-core/macros/tests/ui/settings/fail/fragment_no_section.stderr
error: `section = "..."` is required for `#[settings(fragment = true)]`
 --> tests/ui/settings/fail/fragment_no_section.rs:3:1
  |
3 | #[settings(fragment = true)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `settings` (in Nightly builds, run with -Z macro-backtrace for more info)
